	- Capitalized constructor functions. Now: `ClusterFunction()` and `ClusterExperiment()` 
	- `nPCADims` now changed to `nReducedDims` in clusterMany-related functions
	- `nVarDims` now changed to `nFilterDims` in clusterMany-related functions
	- `dimReduce` argument now changed to `reduceMethod` across functions
	- `ndims` to `nDims` in `clusterSingle` and `makeDendrogram` to keep consistency.
	- Changed `nClusters` to `nClusterings` to better indicate purpose of function. `nClusters` now gives the number of clusters per clustering.
	- `addClusters` to `addClusterings` and `removeClusters` to `removeClusterings`.
	- `clusterInfo()` to `clusteringInfo()`
* `getClusterManyParams` now uses saved `clusterInfo` rather than `clusterLabels` to get parameters. The resulting output is formatted somewhat differently.
* removed `transformation` as a required argument to `ClusterExperiment`. Now sets with default of `function(x){x}`.

Bugs:
* converted automatic assignment of colors in `clusterLegend` to be based on `massivePalette` so won't run out on toy examples.

Changes in version 1.5.0-9002 ( Release date: )
==============
Changes:
* New function `plotClusterLegend` that will plot a legend for a clustering.
* `plotClusters` argument `existingColors` now allows for the option `firstOnly` 
* makeDendrogram now allows option 'coCluster' to the argument `dimReduce` indicating use of the coClustering matrix to build the dendrogram.
* makeDendrogram now has a method for building a dendrogram from an arbitrary distance function
* `showBigPalette` has been replaced with `showPalette` and now can show any palette of colors.
* Changed defaults in `plotDendrogram` so is colorblock of samples.
* The colors in `bigPalette` have been changed and shuffled to reduce similar colors and `massivePalette` has been created by adding the non-grey colors from `colors()` so that `plotClusters` will not run out of colors.