@@ -76,9 +76,9 @@ Collate:
     'plotClustersWorkflow.R'
     'plotContrastHeatmap.R'
     'plotDendrogram.R'
-    'plotDimReduce.R'
     'plotFeatureBoxplot.R'
     'plotHeatmap.R'
+    'plotReduceDim.R'
     'plottingHelpers.R'
     'rsec.R'
     'seqCluster.R'
